--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
 
   postgres:
     image: postgres:17.5
-    container_name: mybike
+    container_name: mybike_db
     ports:
       - "5440:5432"
     env_file:
       - env/postgres.env
     volumes:
-      - mybike_pg_data
+      - mybike_pg_data:/var/lib/postgresql/data
     networks:
       - mybike_network
 
@@ -19,8 +19,16 @@ services:
     env_file:
       - env/pgadmin.env
     volumes:
-      - pgadmin:/var/lib/pgadmin
+      - pgadmin_data:/var/lib/pgadmin
     ports:
       - "5051:80"
     networks:
       - mybike_network
+
+volumes:
+    mybike_pg_data:
+    pgadmin_data:
+
+networks:
+    mybike_network:
+      driver: bridge
