--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,16 @@ services:
     networks:
       - mybike_network
 
+  redis:
+    image:  redis:latest
+    container_name: redis_mybike
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+    networks:
+      - mybike_network
+
+
 volumes:
     mybike_pg_data:
     pgadmin_data:
